<resources>
    <string name="app_name">StudyGroup</string>
    <!--- botones -->
    <string name="bIrRegistro">Registrarse</string>
    <string name="bCrear">Crear Cuenta</string>
    <string name="bIngresar">Ingresar</string>
    <!--- editText -->
    <string name="mail">Mail</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="numeroTelefonico">Numero Telefonico</string>

    <!-- opciones del navigation drawer-->
    <string name="buscar_grupo">Buscar Grupo</string>
    <string name="crear_grupo">Crear Grupo</string>
    <string name="carrera">Carrera</string>
    <string name="ramos">Ramos</string>
    <string name="comunicaciones">Comunicaciones</string>
    <string name="buscar_usuarios">Buscar Usuarios</string>
    <string name="enviar">Enviar</string>

    <!--- otros-->
    <string name="title_activity_main">Study Group</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Acerca de</string>
    <string name="opciones">Opciones</string>
    <string name="void_string"></string>
    <string name="new_item"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--acerca de  -->
    <string name="acerca_de">Autor de android : Daniel Lobos</string>
    <string name="title_activity_maps">Map</string>

</resources>
